@@ -1,7 +1,9 @@
 package com.authflow.service;
 
 import java.util.Collections;
+import java.util.List;
 
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
@@ -28,6 +30,6 @@ public class AppUserDetailsService implements UserDetailsService {
 	public UserDetails loadUserByUsername(String email) throws UsernameNotFoundException {
 		  UserEntity existUser = repo.findByEmail(email)
 		  .orElseThrow(() -> new UsernameNotFoundException("email does not exist "));
-		return new User(existUser.getEmail(), existUser.getPassword(), Collections.emptyList());
+		return new User(existUser.getEmail(), existUser.getPassword(), List.of(new SimpleGrantedAuthority("ROLE_USER")));
 	}
 }
